--- a/README.adoc
+++ b/README.adoc
@@ -49,6 +49,7 @@ By participating in this project, you agree to abide by its terms.
 == Team
 
 * Lucas Greuloch (@greluc)
+* rjcncpt (https://github.com/rjcncpt[@rjcncpt])
 
 image:src/main/resources/logos/MadeByTheCommunity_Black.png[link="https://robertsspaceindustries.com/en/",100]
 image:src/main/resources/logos/Logo_Java.svg[link="https://en.wikipedia.org/wiki/Java_(programming_language)",50]
