ad rjcncpt to README.adoc

--- a/README.adoc
+++ b/README.adoc
@@ -48,7 +48,7 @@ By participating in this project, you agree to abide by its terms.
 [#team]
 == Team
 
-* Lucas Greuloch (@greluc)
+* Lucas Greuloch (https://gitlab.com/greluc[@greluc])
 * rjcncpt (https://github.com/rjcncpt[@rjcncpt])
 
 image:src/main/resources/logos/MadeByTheCommunity_Black.png[link="https://robertsspaceindustries.com/en/",100]
