--- a/README.adoc
+++ b/README.adoc
@@ -51,7 +51,7 @@ By participating in this project, you agree to abide by its terms.
 == Team
 
 * Lucas Greuloch (https://gitlab.com/greluc[@greluc])
-* René Jansen (https://gitlab.com/rjcncpt[@rjcncpt])
+* René Jansen (https://github.com/rjcncpt[@rjcncpt])
 
 image:src/main/resources/logos/MadeByTheCommunity_Black.png[link="https://robertsspaceindustries.com/en/",100]
 image:src/main/resources/logos/Logo_Java.svg[link="https://en.wikipedia.org/wiki/Java_(programming_language)",50]
